--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div id="container">
         <div id="readout"><br>
-          <span id="status">Running... "rekt.exe"</span>
+          <span id="status">Running... "hackt.exe"</span>
           <h1 id="precentage"></h1>
           <div id="things">encrypting:/system/files</div><br>
         </div>
